 'GSM' is Greg Sabino Mullane, greg@turnstep.com


Version 3.5.0  Released January 6, 2015 (git commit bb13d3306fd1c73fac1c0c8a330c14e6b8443942)

  - Allow "placeholder escaping" by the use of a backslash directly before it, e.g.
    "SELECT 1 FROM jsontable WHERE foo \\? ?"
    will contain a single placeholder, and the first question mark will be sent directly 
    to the backend to be parsed as an operator.
    [Greg Sabino Mullane, Tim Bunce]
    (CPAN bug #101030)

  - Improve the workings of the ping() method, so it always tests for 
    a valid database backend and returns the correct true/false.
    [Greg Sabino Mullane, with help from Andrew Gierth and Tim Bunce]
    (CPAN bug #100648)

  - Add get_info(9000) => 1 to indicate driver can escape placeholders.
    [Tim Bunce]

  - In tests, force the client_encoding to UTF8, skip tests that involve 
    characters not supported by the server_encoding
    [Dagfinn Ilmari Mannsåker <ilmari@ilmari.org>]

  - Fix memory leak when selecting from arrays
    [Dagfinn Ilmari Mannsåker, reported by Krystian Samp]

  - Make get_info much more efficient and slightly simpler.
    [Tim Bunce]


Version 3.4.2  Released September 25, 2014 (git commit 61440e1f4ccb6c293c5838676da1942e0df67271)

  - Fix bug where single-quoted type arguments to the table_info()
    method were causing a SQL error.
    [Greg Sabino Mullane] (CPAN bug #99144)


Version 3.4.1  Released August 20, 2014 (git commit cfd146effde09c493ac7573408ac29d6d9cbed47)

  - Allow '%' again for the type in table_info() and thus tables()
    It's not documented or tested in DBI, but it used to work until
    DBD::Pg 3.4.0, and the change broke DBIx::Class::Schema::Loader, which
    uses type='%'.
    [Dagfinn Ilmari Mannsåker <ilmari@ilmari.org>]


Version 3.4.0  Released August 16, 2014 (git commit 7a5da12d84b4c2e9879f90fb6168f56c095071fa)

  - Cleanup and improve table_info()
    [Mike Pomraning <mjp@pilcrow.madison.wi.us>] (github issue #7)
